# terminal-display

./: .gitignore  CLAUDE.md  README.md  eink_terminal.py  main.py  pyproject.toml  setup-pi.sh  stop.sh
.claude/commands/: run.md
.github/workflows/: tests.yml
config/: config.yaml  saved_commands.txt
src/: alert_monitor.py  config_loader.py  display.py  display_eink.py  eink_terminal_app.py  evdev_input.py  hotkeys_mixin.py  llm_chat.py  markdown_renderer.py  markdown_viewer_mixin.py  mlb_screensaver.py  network_mixin.py  notifier.py  palette_help_mixin.py  picker_overlays_mixin.py  preview_server.py  refresh_schedule.py  refresh_tracker.py  render.py  sd_watchdog.py  search_mixin.py  session_logger.py  settings_mixin.py  shell_mixin.py  split_pane_mixin.py  stats_history.py  system_stats.py  tabs_mixin.py  terminal_renderer.py  terminal_state.py  text_actions_mixin.py  util.py  watchdog.py
src/waveshare_epd/: epd7in5_V2.py  epdconfig.py
systemd/: eink-display.service  install.sh  launcher.sh
tests/: conftest.py  test_app_extras.py  test_beam.py  test_command_scripts.py  test_config_roundtrip.py  test_copy_mode.py  test_du_adaptive.py  test_evdev_ctrl_punct.py  test_evdev_shift_enter.py  test_flash_region.py  test_help_overlay.py  test_idle_reset.py  test_llm_chat_menu.py  test_markdown_renderer.py  test_markdown_viewer.py  test_modes.py  test_notes_endpoint.py  test_notify_watchdog.py  test_prompt.py  test_prompt_shells.py  test_refresh_kind.py  test_render_cursor.py  test_screensaver_sleep.py  test_session_logger.py  test_settings.py  test_start_dir.py  test_tab_rename_and_ctrl_t.py  test_wake_and_screensaver.py
